tests/compile-fail/missing-return.plk
fn foo() -> bool { // ERROR: not all paths return a value

}

fn bar() -> unit {

}

fn baz<T>() -> T { // ERROR: not all paths return a value

}
